<resources>
    <string name="app_name">Jobs</string>
    <string-array name="Subject">
        <item>-- Subject --</item>
        <item>English</item>
        <item>Hindi</item>
        <item>Mathematics</item>
        <item>Science</item>
        <item>Social Studies</item>
    </string-array>

    <string name="enter_batch_timings">Enter Batch Timings</string>
    <string name="time">Time</string>
    <string name="t1">HH:MM</string>
    <string name="to">to</string>
    <string name="t2">HH:MM</string>
    <string name="mon">Monday                              </string>
    <string name="tue">   Tuesday                             </string>
    <string name="wed">   Wednesday                           </string>
    <string name="thurs">   Thursday                           </string>
    <string name="fri">   Friday                              </string>
    <string name="sat">   Saturday                            </string>
    <string name="sun">   Sunday                              </string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="create">Create</string>
    <string name="hint_pin">Enter Pincode</string>
    <string name="hint_house_no">Enter Building name / House no. / Premises No.</string>
    <string name="hint_landmark">Enter Any Landmark(Optional)</string>
    <string name="hint_area">Enter Area / Locality / Street name</string>
    <string name="hint_city">Enter City</string>
    <string name="hint_state">Enter State</string>
    <string name="hint_country">Enter Country</string>
    <string name="hint_address">Enter Your Full Address</string>
    <string name="radio_home_address">Home address</string>
    <string name="radio_office_address">Office address</string>
    <string name="address_type">Address Type</string>
</resources>